# projet_C_avec_raylib_MP2I

./: CMakeLists.txt  main.c
assets/: colormap.txt
